# SLL_arm

./: .gitignore  README.md
catkin_ws_example/install/: _setup_util.py
catkin_ws_example/src/basic_exercises/: CMakeLists.txt  package.xml
src/alice_controller/: package.xml
src/alice_controller/script/: test.py
src/alice_description/urdf/: alice.urdf  alice_control.yaml  alice_head.urdf.xacro  complete_model.urdf  complete_model.urdf.xacro  complete_model_bottom_part.urdf.xacro  complete_model_mico_arm.urdf.xacro  mico_arm.urdf
src/alice_gazebo/launch/: alice_simulation.launch  alice_simulation_2.launch  micoarm.launch
src/alice_gazebo/worlds/: boardobjects.world  cafeRoom.world  exp1.world  oneobject.world
src/alice_msgs/: CMakeLists.txt
src/alice_msgs/action/: pointcloudfunction.action
src/alice_nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/alice_nav/launch/: alice_config.launch  alice_gmapping.launch  alice_laser.launch  alice_nav.launch  xtion_test.launch  xtions.launch
src/alice_teleop_keyboard/: CMakeLists.txt  package.xml
src/borg_nao/launch/: borg_nao.launch  colorblob.launch
src/colorblob/: CMakeLists.txt  package.xml
src/colorblob/launch/: calibrated.launch  colorblob.launch
src/colorblob/msg/: Bbox.msg  BboxArray.msg
src/colorblob/scripts/: calibrator.py
src/gazebo_controller/scripts/: final_test.py
src/head_controller/scripts/: client.py  tf_publisher.py  tf_publisher_simulation.py
src/head_spin/: CMakeLists.txt  package.xml
src/head_spin/include/: headSpinner.h
src/head_spin/scripts/: get_image.py  test.py  testImages.py
src/head_spin/src/: main.cc
src/mico_arm/: CMakeLists.txt  boardworld  package.xml
src/mico_arm/config/: controllers.yaml  mico.srdf
src/mico_arm/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  mico_arm.launch  mico_arm_python.launch  mico_gazebo.launch  mico_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realarmgrasping_part1.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/mico_arm/nodes/: armmove.py  armmove2_armpack.py  armmove_bruteforce.py  armmove_trialrandom.py  closehand.py  sweepboard.py
src/mico_arm/scripts/: listener.py
src/mico_controller/: CMakeLists.txt  package.xml
src/mico_controller/include/: Kinova.API.UsbCommandLayerUbuntu.h  micoArm.h
src/mico_controller/scripts/: simulation_controller.py  test.py
src/mico_controller/src/: main.cc  micoArm.cc  nnTester.cc  trajectory.cc
src/mico_gazebo/: CMakeLists.txt  package.xml
src/mico_gazebo/config/: mico_control.yaml  mico_control.yaml.bck  mico_control.yaml.ckp2
src/mico_gazebo/launch/: mico_gazebo.launch  mico_gazebo2.launch
src/mico_gazebo/scripts/: test.py
src/mico_gazebo/urdf/: alice_head.urdf.xacro  complete_model.urdf.xacro  complete_model_mico_arm.urdf.xacro  mico.urdf  mico_arm.urdf.xacro  test.urdf  test.urdf.xacro  test.urdf.xacro.bck  test2.urdf.xacro  testold.urdf.xacro
src/mico_moveit/config/: fake_controllers.yaml  joint_limits.yaml  mico.srdf  mico_controllers.yaml  mico_controllers_simulation.yaml  ompl_planning.yaml  sensors_xtion.yaml
src/mico_moveit/launch/: default_warehouse_db.launch  demo.launch  demo2.launch  mico_moveit_controller_manager.launch.xml  mico_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  new_world.launch  planning_context.launch  planning_pipeline.launch.xml  realDemo.launch  trajectory_execution.launch.xml  warehouse.launch
src/mico_moveit2/: package.xml
src/mico_moveit2/config/: joint_limits.yaml  mico.srdf  mico_controllers.yaml  mico_controllers.yaml.bck  ompl_planning.yaml
src/mico_moveit2/launch/: demo.launch  (+7 more)
src/my_dynamixel_tutorial/: CMakeLists.txt  client.py  controller_manager.launch  dynamixel.launch  headController.py  package.xml
src/nn_controller/: CMakeLists.txt  package.xml
src/old_stuff/object_recognition/: CMakeLists.txt  package.xml
src/old_stuff/object_recognition/launch/: object_recognition.launch
src/old_stuff/object_recognition/src/: main.cc  utils.h
src/old_stuff/object_recognition/src/clusterObjects/: cluster.cc  clusterObjects.cc  clusterObjects.h  clusterObjects.ih
src/old_stuff/object_recognition/src/objectRecognizer/: classify.cc  cleanUpImage.cc  colorClusters.cc  computeNormals.cc  estimateDescriptors.cc  extractFeatures.cc  filterView.cc  findDims.cc  getSize.cc  jsonParser.cc  loadDB.cc  objectRecognizer.cc  objectRecognizer.h  objectRecognizer.ih  processpcl.cc  publishize.cc  run.cc  sample.cc  splitClusters.cc  writeResults.cc
src/old_stuff/object_recognition/src/planarRemover/: planarRemover.h  planarRemover.ih  removePlanarSurface.cc
src/old_stuff/objects_2d/: CMakeLists.txt  package.xml
src/old_stuff/objects_2d/src/: main.cc
src/old_stuff/pioneercontroller/: .gitignore  CMakeLists.txt  package.xml
src/old_stuff/pioneercontroller/include/pioneercontroller2/: commandparser.h  motioncontroller.h  pioneercontroller.h  types.h
src/old_stuff/pioneercontroller/src/: main.cc
src/old_stuff/pioneercontroller/src/commandparser/: constructor.cc  destructor.cc  parsecommand.cc  parsetwistcommand.cc
src/old_stuff/pioneercontroller/src/motioncontroller/: connect_robot.cc  constructor.cc  destructor.cc  disconnect_robot.cc  drive_forward.cc  drive_turn.cc  get_odometry.cc  get_status_string.cc  handle_signal.cc  handlecommand.cc  handlecommanddouble.cc  on_conn_fail.cc  on_connected.cc  on_disconnected.cc  runner.cc  set_cmd_vel.cc  set_options.cc  set_speeds.cc  start.cc  staticdata.cc  stop.cc  tdiff.cc
src/old_stuff/pioneercontroller/src/pioneercontroller/: constructor.cc  message_received.cc  pioneercontroller.ih  publish_odometry.cc  publish_status.cc  run.cc  twist_message_received.cc
(+641 files in other folders)
