<?xml version="1.0"?>
<package>
  <name>pioneercontroller</name>
  <version>2.0.0</version>
  <description>
     pioneercontroller
  </description>
  <maintainer email="homerug@googlegroups.com">BORG</maintainer>
  <author email="homerug@googlegroups.com">BORG</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/pioneercontroller</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>


